# axcioma

./: .clang-format  .env_add.sh  .gitignore  ACE_Auto_Ptr.patch  CMakeLists.txt  LICENSE  PROBLEM-REPORT-FORM  README.adoc  azure-pipelines.yml  build-taox11-for-osx.sh  build-taox11-on-linux.sh  setenv.bat
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md
.github/workflows/: cancel_previous_runs.yml  fuzzr.yml  github.yml  linux.yml  windows.yml
brix11/docs/src/: brix11.adoc
brix11/lib/: brix11.rb
brix11/lib/brix11/: base.rb  collection.rb  command.rb  console.rb  formatter.rb  log.rb  options.rb  process.rb  project.rb  screen.rb  system.rb
brix11/lib/brix11/brix/common/: require.rb
brix11/lib/brix11/brix/common/cmds/: bootstrap.rb  configure.rb  environment.rb  execute.rb  genbuild.rb  gendoc.rb  help.rb  hostbuild.rb  make.rb
brix11/lib/brix11/brix/common/cmds/configure/: ace_config.rb  brix11_config.rb  configurator.rb  dsl.rb  hostsetup.rb  mpc_config.rb  platform.rb  ridl_config.rb  util.rb
brix11/lib/brix11/brix/common/cmds/gendoc/: adoc-ext.rb  doxygen.rb  htmlgen.rb
brix11/lib/brix11/brix/common/cmds/make/: listbuild.rb
brix11/lib/brix11/brix/common/docs/: bootstrap.rd  configure.rd  environment.rd  execute.rd  generate_build.rd  generate_documentation.rd  help.rd  host_build.rd  make.rd
brix11/lib/brix11/docs/: brix.rd
brix11/lib/brix11/projects/: gnuace.rb  gnuautobuild.rb  msbuild.rb  nmake.rb  solution.rb
brix11/lib/brix11/projects/compilers/: gnu.rb  msc.rb
brix11/lib/brix11/projects/filters/: gnumake.rb  msbuild.rb  nmake.rb  ridl.rb  tao_idl.rb
cmake/: GenerateTaoIdl.cmake  GlobalSettings.cmake
etc/: brix11rc  configurerc  yocto.json
etc/docs/config/: _html5_settings.adoc  _settings.adoc  docinfo-footer.html  docinfo.html
etc/docs/html/stylesheets/: coderay-asciidoctor.css  remedy.css
